# python-debugging

./: .gitignore  data_validator.py  file_processor.py  main.py  pyproject.toml  test_processor.py  utils.py
output/: encoding_issue.json  invalid_email.json  invalid_id.json  valid_data.json
sample_data/: encoding_issue.csv  invalid_email.csv  invalid_id.csv  missing_fields.csv
