[tool.poetry]
name = "python-debugging"
version = "0.1.0"
description = ""
authors = ["Ido Levitt <ido.levitt@wnwd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.3.3"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
